wamerican package as word dictionary

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ yapf = "*"
 mypy = "*"
 yourproject = {editable = true, extras = ["pretty"], path = "."}
 pytest-cov = "*"
+pytest-mock = "*"
+assertpy = "*"
 
 [packages]
 
