Command line interface

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,11 +18,8 @@ license = MIT
 zip_safe = False
 packages = find:
 python_requires = >=3.6
-# install_requires =
-    # TODO: List dependencies here as if it were requirements.txt
-
-[options.extras_require]
-pretty = rich
+install_requires =
+    rich==11.0.0
 
 [options.entry_points]
 console_scripts =
