--- a/setup.cfg
+++ b/setup.cfg
@@ -5,9 +5,9 @@ author = Gino Latorilla
 author_email = pblatorilla@gmail.com
 description = Helps you win a Wordle game
 long_description = file: README.md
-# url = A website, maybe your projects Git repo? # TODO: Replace with yours.
-# project_urls =
-#    Bug Tracker = This could be based from url, but maybe something like "${url}/issues". # TODO: Replace with yours.
+url = https://github.com/ginolatorilla/wordlesolver
+project_urls =
+    Bug Tracker = https://github.com/ginolatorilla/wordlesolver/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
