--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    wordlesolver = cli:main
+    wordlesolver = wordlesolver.cli:main
 
 [options.packages.find]
 exclude =
